Use in-jvm dtest framework for integration tests.
This commit replaces the existing TestContainers-based test template
with one that leverages Cassandra's in-jvm dtest framework now that it
has JMX support. This will allow for more complete testing of endpoints,
especially when those endpoints need to react to cluster changes like
moves, joins, and leaves.